--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -36742,6 +36742,9 @@
         }
       }
     },
+    "Remote" : {
+
+    },
     "Remote control" : {
       "localizations" : {
         "de" : {
