--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -4333,9 +4333,6 @@
         }
       }
     },
-    "5-50 %/sec" : {
-
-    },
     "7TV emotes" : {
       "localizations" : {
         "de" : {
@@ -4447,15 +4444,6 @@
           }
         }
       }
-    },
-    "25-500 Kbps/sec" : {
-
-    },
-    "25-1250 Kbps/sec" : {
-
-    },
-    "50-500 pkts" : {
-
     },
     "128 Kpbs or higher is recommended." : {
       "localizations" : {
@@ -6148,9 +6136,6 @@
       }
     },
     "Allowed RTT spike" : {
-
-    },
-    "Allowed spike: 50-200 ms" : {
 
     },
     "Amplitude" : {
@@ -29850,6 +29835,9 @@
         }
       }
     },
+    "Minimum bitrate decrease speed" : {
+
+    },
     "Moblin" : {
       "localizations" : {
         "de" : {
@@ -38608,9 +38596,6 @@
         }
       }
     },
-    "RTT diff minimum decrease" : {
-
-    },
     "Scene" : {
       "localizations" : {
         "de" : {
@@ -45683,6 +45668,9 @@
         }
       }
     },
+    "The bitrate decrease speed when RTT is too high." : {
+
+    },
     "The bitrate will decrease quickly when the number of packets in flight are above this value." : {
 
     },
@@ -45913,7 +45901,7 @@
     "The maximum allowed RTT spike before decreasing the bitrate" : {
 
     },
-    "The minimum rate at which the bitrate will decrease when RTT is too high" : {
+    "The minimum bitrate decrease speed when RTT is too high." : {
 
     },
     "The name of the Source in OBS that receives the stream from Moblin." : {
