Start/stop recording confirmations toggle.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -36689,6 +36689,9 @@
         }
       }
     },
+    "Recording confirmations" : {
+
+    },
     "Recordings" : {
       "localizations" : {
         "de" : {
