Experimental global tone mapping toggle.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -23130,6 +23130,9 @@
         }
       }
     },
+    "Global tone mapping" : {
+
+    },
     "Go Live" : {
       "localizations" : {
         "de" : {
