Browser widget continued.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -25491,6 +25491,9 @@
         }
       }
     },
+    "Interactive" : {
+
+    },
     "Interval" : {
       "localizations" : {
         "de" : {
