--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -25491,9 +25491,6 @@
         }
       }
     },
-    "Interactive" : {
-
-    },
     "Interval" : {
       "localizations" : {
         "de" : {
@@ -38628,6 +38625,9 @@
           }
         }
       }
+    },
+    "Scale to fit video" : {
+
     },
     "Scene" : {
       "localizations" : {
