Disable connection toggle.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -15947,6 +15947,9 @@
         }
       }
     },
+    "Disabled connections will not be used." : {
+
+    },
     "Discord" : {
       "localizations" : {
         "de" : {
