--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -11762,6 +11762,9 @@
         }
       }
     },
+    "Channels mapping" : {
+
+    },
     "Chat" : {
       "localizations" : {
         "de" : {
