Browser widget fixes and status information in UI.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -10869,6 +10869,9 @@
         }
       }
     },
+    "Browser widgets" : {
+
+    },
     "BTTV emotes" : {
       "localizations" : {
         "de" : {
