--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -6934,9 +6934,6 @@
         }
       }
     },
-    "Apple Log" : {
-
-    },
     "Are you sure?" : {
       "localizations" : {
         "de" : {
@@ -12899,6 +12896,9 @@
           }
         }
       }
+    },
+    "Color space" : {
+
     },
     "Colors" : {
       "localizations" : {
@@ -19224,9 +19224,6 @@
           }
         }
       }
-    },
-    "Experimental and does not yet work!" : {
-
     },
     "Export to clipboard" : {
       "localizations" : {
