Select back, front, RTMP or external camera per scene.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -19456,6 +19456,9 @@
         }
       }
     },
+    "External" : {
+
+    },
     "External mic overrides follow scene toggle" : {
       "localizations" : {
         "de" : {
